--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -6,6 +6,13 @@ $primary-invert: #ffffff
 nav
   border-bottom: lightgray solid 0.1vmin
 
+.hero
+  background: #b01800
+
+.button
+  border-color: #b01800
+  background: #b01800
+
 .content .taglist
   list-style: none
   margin-bottom: 0
@@ -23,3 +30,4 @@ nav
 
 .margin-top-0
   margin-top: 0 !important
+
